--- a/templates/header.html
+++ b/templates/header.html
@@ -8,15 +8,15 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <ul class="navbar-nav mr-auto">
-      <a class="nav-item nav-link active" href="/menu">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link " href="/menu">Home <span class="sr-only">(current)</span></a>
       {% if request.session.user_id %}
-      <a class="nav-item nav-link" href="/gallery">Gallery</a>
-      <a class="nav-item nav-link" href="/styletransfer">Styletransfer</a>
-      <a class="nav-item nav-link" href="/delmypic">Delmypic</a>
-      <a class="nav-item nav-link" href="/facerecognition">Facerecognition</a>
+      <a class="nav-item nav-link gallery" href="/gallery">Gallery</a>
+      <a class="nav-item nav-link styletransfer" href="/styletransfer">Styletransfer</a>
+      <a class="nav-item nav-link delmypic" href="/delmypic">Delmypic</a>
+      <a class="nav-item nav-link facerecognition" href="/facerecognition">Facerecognition</a>
       {% endif %}
     </ul>
-    
+
     <ul class="navbar-nav mr-right">
       {% if not request.session.user_id %}
       <a class="nav-item nav-link" href="/signup">SIGNUP</a>
