--- a/home/templates/styletransfer2.html
+++ b/home/templates/styletransfer2.html
@@ -28,22 +28,22 @@
       <div>
         
         <label for=style1>
-          <figure><div><img id="style-1" src="{% static './makeupstyle/1.jpg' %}" style="height:120px;width:auto"></div><figcaption>風格1</figcaption></figure>
+          <figure><div><img id="style-1" src="{% static './makeupstyle/1.webp' %}" style="height:120px;width:auto"></div><figcaption>風格1</figcaption></figure>
         </label>
         <input type="radio" name="style" id="style1" value="style1">
 
         <label for=style2>
-          <figure><div><img id="style-2" src="{% static './makeupstyle/2.jpg' %}" style="height:120px;width:auto"></div><figcaption>風格2</figcaption></figure>
+          <figure><div><img id="style-2" src="{% static './makeupstyle/2.webp' %}" style="height:120px;width:auto"></div><figcaption>風格2</figcaption></figure>
         </label>
         <input type="radio" name="style" id="style2" value="style2">
 
         <label for=style3>
-          <figure><div><img id="style-3" src="{% static './makeupstyle/3.jpg' %}" style="height:120px;width:auto"></div><figcaption>風格3</figcaption></figure>
+          <figure><div><img id="style-3" src="{% static './makeupstyle/3.webp' %}" style="height:120px;width:auto"></div><figcaption>風格3</figcaption></figure>
         </label>
         <input type="radio" name="style" id="style3" value="style3">
 
         <label for=style4>
-          <figure><div><img id="style-4" src="{% static './makeupstyle/4.jpg' %}" style="height:120px;width:auto"></div><figcaption>風格4</figcaption></figure>
+          <figure><div><img id="style-4" src="{% static './makeupstyle/4.webp' %}" style="height:120px;width:auto"></div><figcaption>風格4</figcaption></figure>
         </label>
         <input type="radio" name="style" id="style4" value="style4">
       </div>
@@ -52,25 +52,25 @@
       <div>
 
         <label for=style5>
-          <figure><div><img id="style-5" src="{% static './makeupstyle/5.jpg' %}" style="height:120px;width:auto"></div><figcaption>風格5</figcaption></figure>
+          <figure><div><img id="style-5" src="{% static './makeupstyle/5.webp' %}" style="height:120px;width:auto"></div><figcaption>風格5</figcaption></figure>
         </label>
 
         <input type="radio" name="style" id="style5" value="style5">
 
 
         <label for=style6>
-          <figure><div><img id="style-6" src="{% static './makeupstyle/6.jpg' %}" style="height:120px;width:auto"></div><figcaption>風格6</figcaption></figure>
+          <figure><div><img id="style-6" src="{% static './makeupstyle/6.webp' %}" style="height:120px;width:auto"></div><figcaption>風格6</figcaption></figure>
         </label>
         <input type="radio" name="style" id="style6" value="style6">
 
 
         <label for=style7>
-          <figure><div><img id="style-7" src="{% static './makeupstyle/7.jpg' %}" style="height:120px;width:auto"></div><figcaption>風格7</figcaption></figure>
+          <figure><div><img id="style-7" src="{% static './makeupstyle/7.webp' %}" style="height:120px;width:auto"></div><figcaption>風格7</figcaption></figure>
         </label>
         <input type="radio" name="style" id="style7" value="style7">
 
         <label for=style8>
-          <figure><div><img id="style-8" src="{% static './makeupstyle/8.jpg' %}" style="height:120px;width:auto"></div><figcaption>風格8</figcaption></figure>
+          <figure><div><img id="style-8" src="{% static './makeupstyle/8.webp' %}" style="height:120px;width:auto"></div><figcaption>風格8</figcaption></figure>
         </label>
         <input type="radio" name="style" id="style8" value="style8">
 
