--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,10 +16,10 @@
     {% endif %}
     {% if photopath == None %}
 	{% if title == "STYLE TRANSFER" %}
-    <div><img id="blah" style=" max-height: 600px; max-width:500px; margin:0 auto" src="{% static 'website_picture/makups.jpg' %}"
+    <div><img id="blah" style=" max-height: 600px; max-width:500px; margin:0 auto" src="{% static 'website_picture/makups.webp' %}"
         alt="your image" title='' /></div>
     {% else %}
-    <div><img id="blah" style=" max-height: 600px; max-width:500px; margin:0 auto" src="{% static 'website_picture/star.jpg' %}"
+    <div><img id="blah" style=" max-height: 600px; max-width:500px; margin:0 auto" src="{% static 'website_picture/star.webp' %}"
         alt="your image" title='' /></div>
 
 {% endif %}
