--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -6,19 +6,22 @@
 
 <form action="/selected/" method="get">
 
-  <div class="form-group">
-    <!-- <label for="typename">Class name</label>
+    <div class="form-group">
+        <!-- <label for="typename">Class name</label>
                 <input type="text" name="searchname" class="form-control" id="typename">
         </div> -->
-    <!-- <div class="form-group">
+        <!-- <div class="form-group">
                 <label for="numbersinput">Numbers</label>
                 <input type="text" name="nums" class="form-control" id="numbersinput"> -->
-    <label for="typename">語意分析用</label>
-    <input type="text" name="luis" class="form-control" id="luis">
-  </div>
-  <button type="submit" class="btn btn-primary nt-3">Submit</button>
+        <label for="typename">語意分析用</label>
+        <input type="text" name="luis" class="form-control" id="luis">
+    </div>
+    <button type="submit" class="btn btn-primary nt-3">Submit</button>
+    <a class="btn btn-primary" href="/delmypic">MANAGE</a>
+
 </form>
 
+{% for data in datas%}
 
 <!-- <div class="ml-3" style="float: left; z-index: auto;">
     <a href="{% static data.image_path %}" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
@@ -26,111 +29,16 @@
     </a>
 </div> -->
 
-<!-- <div class="ml-3" style="display:inline"> -->
-<!-- <label for="{{data.image_path}}"><input name="image_selected" id="{{ data.image_path }}" type="checkbox" value="{{ data.image_path }}"></label> -->
+<div class="card rounded mx-auto d-block" style="width: 360px; height: 270px;float: left; z-index: auto;">
+    <img id="gla" src="{% static data.image_path %}" style="height:200px;width:auto" class="mx-auto d-block" alt="">
 
-<!-- <a href="{% static data.image_path %}" class="col-md-4"> -->
-<!-- <img id="gla" src="{% static data.image_path %}" style="max-width: 200px;" alt="">   -->
-<!-- </a> -->
-
-<!-- </div> -->
-<hr>
-<form action="/delmypic/" name="formpic" method="post">
-  {% if datas %}
-  <button id="delpicaaa" type="button" class="btn btn-primary nt-3" onclick="myfunction()">DELETE</button>
-  <button id="delete" type="submit" class="btn btn-primary nt-3" style="display:none"></button>
-
-  {% endif %}
-  <hr>
-  {%csrf_token%}
-  {% for data in datas%}
-  <div class="ml-5 imgblock" style="display: inline-block;text-align:center;">
-
-   <div class="custom-control custom-checkbox mb-3">
-    <input type="checkbox" class="custom-control-input custom-checkbox" id="{{data.image_path}}" name="checks"
-      value="{{ data.image_path }}">
-    <label class="custom-control-label" for="{{data.image_path}}">
-      <img id="gla" src="{% static data.image_path %}" style="max-width: 200px;" alt="">
-    </label>
-
-    </div>
+    <!-- <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div> -->
   </div>
-  {% endfor %}
-  <!-- <button id="delpicaaa" type="submit" class="btn btn-primary nt-3">Submit</button> -->
-</form>
 
-
-<script>
-function myfunction() {
-  
-  var r = confirm("確認刪除照片嗎？");
-  if (r == true) {
-  	$("#delete").click()
-  } else {
-      
-  }
-  document.getElementById("demo").innerHTML = txt;
-}
+{% endfor %}
 
 
 
-
-
-
-
-  $.ajaxSetup({
-    beforeSend: function (xhr, settings) {
-      function getCookie(name) {
-        var cookieValue = null;
-        if (document.cookie && document.cookie != '') {
-          var cookies = document.cookie.split(';');
-          for (var i = 0; i < cookies.length; i++) {
-            var cookie = jQuery.trim(cookies[i]);
-            // Does this cookie string begin with the name we want?
-            if (cookie.substring(0, name.length + 1) == (name + '=')) {
-              cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-              break;
-            }
-          }
-        }
-        return cookieValue;
-      }
-      if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
-        // Only send the token to relative URLs i.e. locally.
-        xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
-      }
-    }
-  });
-
-  $("#delpic").click(function () {
-    $.ajaxSetup({
-      beforeSend: function (xhr, settings) {
-        function getCookie(name) {
-          var cookieValue = null;
-          if (document.cookie && document.cookie != '') {
-            var cookies = document.cookie.split(';');
-            for (var i = 0; i < cookies.length; i++) {
-              var cookie = jQuery.trim(cookies[i]);
-              // Does this cookie string begin with the name we want?
-              if (cookie.substring(0, name.length + 1) == (name + '=')) {
-                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                break;
-              }
-            }
-          }
-          return cookieValue;
-        }
-        if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
-          // Only send the token to relative URLs i.e. locally.
-          xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
-        }
-      }
-    });
-
-    $.post("/delmypic/", $("#formpic").serialize()
-      , function (data) {
-
-      })
-  })
-</script>
 {% endblock%}
