last maybe final?

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,14 +20,14 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
 
-
+    <link rel="stylesheet" type="text/css" href="{% static 'lightcase/src/css/lightcase.css' %}">
 
 
 
   <style>
     img:not([class]) {
       filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.5));
-      margin: 30px;
+      /* margin: 30px; */
       border-radius: 9px;
 
 
