--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -21,6 +21,7 @@
 
 </form>
 
+
 {% for data in datas%}
 
 <!-- <div class="ml-3" style="float: left; z-index: auto;">
@@ -29,9 +30,9 @@
     </a>
 </div> -->
 
-<div class="card rounded mx-auto d-block" style="width: 360px; height: 270px;float: left; z-index: auto;">
-    <img id="gla" src="{% static data.image_path %}" style="height:200px;width:auto" class="mx-auto d-block" alt="">
-
+<div class="rounded mx-auto d-block mt-5" style="width:300px;height:300;float: left; z-index: auto;">
+    <a href="{% static data.image_path %}" data-rel="lightcase"><img id="gla" src="{% static data.image_path %}" style="max-height:200px;width:auto" class="mx-auto d-block" alt="">
+</a>
     <!-- <div class="card-body">
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div> -->
