--- a/home/templates/manage.html
+++ b/home/templates/manage.html
@@ -52,7 +52,7 @@
     <input type="checkbox" class="custom-control-input custom-checkbox" id="{{data.image_path}}" name="checks"
       value="{{ data.image_path }}">
     <label class="custom-control-label" for="{{data.image_path}}">
-      <img id="gla" src="{% static data.image_path %}" style="max-width: 200px;" alt="">
+      <img id="gla" src="{% static data.image_path %}" style="max-height:200px;width:auto" alt="">
     </label>
 
     </div>
