--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -1,3 +1,4 @@
+{% load static %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
   urlNow=window.location.href.split('/')
@@ -427,4 +428,10 @@
 
 
 
+</script>
+<script type="text/javascript" src="{% static 'lightcase/src/js/lightcase.js' %}"></script>
+<script type="text/javascript">
+  jQuery(document).ready(function($) {
+    $('a[data-rel^=lightcase]').lightcase();
+  });
 </script>
