--- a/home/templates/styletransfer2.html
+++ b/home/templates/styletransfer2.html
@@ -11,13 +11,12 @@
    
     <div class="row">
       <div class="mt-3" style="margin:0 auto">
-        <img id="radius" src="{% static './temp/before.jpg' %}" style="height: 250px;width:auto;display:inline-block;">
-        <img id="radius" class="notradius" src="{% static './website_picture/arrow.png' %}" style="height: 250px;width:auto;display:inline-block;margin-left: 50px;">
-        <img id="radius" src="{% static './temp/split.jpg' %}" style="height: 250px;width:auto;display:inline-block; margin-left: 50px;display:inline-block;">
+        <img id="radius" src="{% static './temp/before.jpg' %}" style="height:auto;width:300px;display:inline-block;">
+        <img id="radius" class="notradius" src="{% static './website_picture/arrow.png' %}" style="height:auto;width:300px;display:inline-block;margin-left: 50px;">
+        <img id="radius" src="{% static './temp/split.jpg' %}" style="height:auto;width:300px;display:inline-block; margin-left: 50px;display:inline-block;">
       </div>
     </div>
     
-    <div><button type="submit"  name="style"  class="btn btn-primary" id="style999" style="margin:0 100px; height:40px;width:100px" value="style999" onclick="submitjs()">Save</button></div>
     {% endif %}
         
 
@@ -78,7 +77,7 @@
     </div>
 
   
-  <div class="container">
+  
     <div class="row">
       <div class="mt-3">
 
@@ -87,9 +86,13 @@
 
     </div>
 
+{% if photopath != None %}
+<div class="row">
 
-
-  </div>
+    <div class="mt-3"><button type="submit"  name="style"  class="btn btn-primary" id="style999" style="margin:0 100px; height:40px;width:100px" value="style999" onclick="submitjs()">Save</button></div>
+</div>
+{% endif %}
+ 
 
 </div>
 </div>
