--- a/home/templates/manageselect.html
+++ b/home/templates/manageselect.html
@@ -49,9 +49,9 @@
   <div class="ml-5 imgblock" style="display: inline-block;text-align:center;">
 
    <div class="custom-control custom-checkbox mb-3" style="inline-box">
-    <input type="checkbox" class="custom-control-input custom-checkbox" id="{{data.image_path}}" name="checks"
-      value="{{ data.image_path }}">
-    <label class="custom-control-label"style="font-family: "Times New Roman", Times, serif;" for="{{data.image_path}}">
+    <input type="checkbox" class="custom-control-input custom-checkbox" id="{{% data.image_path %}}" name="checks"
+      value="{{% data.image_path %}}">
+    <label class="custom-control-label"style="font-family: "Times New Roman", Times, serif;" for="{{% data.image_path %}}">
       <img id="gla" src="{% static data.image_path %}" style="height:auto;max-width:200px" alt="">
     </label>
 
