--- a/home/templates/manageselect.html
+++ b/home/templates/manageselect.html
@@ -51,7 +51,7 @@
    <div class="custom-control custom-checkbox mb-3" style="inline-box">
     <input type="checkbox" class="custom-control-input custom-checkbox" id="{{ data.0.image_path }}" name="checks"
       value="{{ data.0.image_path }}">
-    <label class="custom-control-label"style="font-family: "Times New Roman", Times, serif;" for="{{ data.0 }}">
+    <label class="custom-control-label"style="font-family: "Times New Roman", Times, serif;" for="{{ data.0.image_path }}">
       <img id="gla" src="{% static data.0.image_path %}" style="height:auto;max-width:200px" alt="">
     </label>
 
