correct loading.gif

--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -14,7 +14,7 @@
                 <label for="numbersinput">Numbers</label>
                 <input type="text" name="nums" class="form-control" id="numbersinput"> -->
        <h3> <label for="typename">語意搜尋</label><h3>
-        <input type="text" name="luis" class="form-control" id="luis" x-webkit-speech lang="zh-tw"/>
+        <input type="text" name="luis" class="form-control" id="luis" required/>
     </div>
     <button type="submit" class="btn btn-primary nt-3">Submit</button>
     <a class="btn btn-primary" href="/delmypic">MANAGE</a>
