--- a/home/templates/select.html
+++ b/home/templates/select.html
@@ -20,7 +20,7 @@
             {% endif %}
 
         <label for="typename">語意分析用</label>
-        <input type="text" name="luis" class="form-control" id="luis" x-webkit-speech lang="zh-TW"/>
+        <input type="text" name="luis" class="form-control" id="luis" required/>
     </div>
     <button type="submit" class="btn btn-primary nt-3">Submit</button>
     <a class="btn btn-primary nt-3" href="/gallery">Clean</a>
