--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,7 +59,7 @@
 //b = $('<iframe src="{% static 'forjs/wait.html' %}" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999; position:absolute; opacity:0.8; display:none;" frameborder="0" scrolling="no"></iframe>');
 b=$('<img src="{% static 'website_picture/loading.gif' %}" alt="" style="box-shadow: none; position: absolute;  left:40%; top: 40%; width:300px; height:300px;   z-index:999999; opacity:0.3; border-radius: 40px;">')
   function submitjs() {
-    if ($('#blah').attr("src") != "/static/images/star.jpg") {
+    if ($('#blah').attr("src") != "/static/website_picture/star.webp" | $('#blah').attr("src") != "/static/website_picture/makups.webp") {
       //console.log($('#blah').attr("src"))
       
       $('body').append(b);
