--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,7 @@
 
 
     <div class="mb-3 mt-3">
-      <button type="submit" onclick="submitjs()" id="photouploadButton" class="btn btn-primary">Submit</button>
+      <button type="submit" id="photouploadButton" class="btn btn-primary">Submit</button>
      
       <span class="ml-3" id="warnforpic"></span>
       <sapn class="ml-3" id="warnforpic"></sapn>
