--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -1,8 +1,4 @@
-{% extends 'base.html'%}
-{% load static %}
-{% block title %}AIEN06-TEAM 4{% endblock %}
-
-{% block content %}
+{% extends 'base.html'%} {% load static %} {% block title %}AIEN06-TEAM 4{% endblock %} {% block content %}
 
 <form action="/selected/" method="get">
 
@@ -13,8 +9,9 @@
         <!-- <div class="form-group">
                 <label for="numbersinput">Numbers</label>
                 <input type="text" name="nums" class="form-control" id="numbersinput"> -->
-       <h3> <label for="typename">語意搜尋</label><h3>
-        <input type="text" name="luis" class="form-control" id="luis" required/>
+        <h3> <label for="typename">語意搜尋</label>
+            <h3>
+                <input type="text" name="luis" class="form-control" id="luis" required/>
     </div>
     <button type="submit" class="btn btn-primary nt-3">Submit</button>
     <a class="btn btn-primary" href="/delmypic">MANAGE</a>
@@ -31,15 +28,11 @@
 </div> -->
 
 <div class="ml-5" style="display:inline;">
-    <a href="{% static data.image_path %}" data-rel="lightcase" ><img id="gla" src="{% static data.image_path %}" style="height:auto;max-width:200px;margin-top:20px;" alt="">
-</a>
+    <a href="{% static data.image_path %}" data-rel="lightcase"><img id="gla" class="img lazy" data-src="{% static data.image_path %}" style="height:auto;max-width:200px;margin-top:20px;" alt="">
+    </a>
     <!-- <div class="card-body">
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div> -->
-  </div>
+</div>
 
-{% endfor %}
-
-
-
-{% endblock%}
+{% endfor %} {% endblock%}
