--- a/templates/base.html
+++ b/templates/base.html
@@ -4,112 +4,206 @@
 
 <head>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}{% endblock%}</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}{% endblock%}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" type="text/css" href="{% static 'lightcase/src/css/lightcase.css' %}">
 
 
 
-  <style>
-    img:not([class]) {
-      filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.5));
-      /* margin: 30px; */
-      border-radius: 9px;
-
-
-    }
-
-    img[id*="style"] {
-      opacity: 0.7;
-    }
-
-    img:hover:not(#radius):not(#blah):not(#gla) {
-      opacity: 1;
-      box-shadow: 0 0 5px 3px rgba(0, 140, 186, 0.5);
-
-    }
-
-
-    input {
-      display: none;
-    }
-
-    figcaption {
-      text-align: center;
-    }
-
-    .earth {
-      transform: rotate(60deg);
-      width: 50px;
-      height: 50px;
-      overflow: hidden;
-
-      /*margin-left: auto;
+    <style>
+        @keyframes loading {
+            from {
+                background-position-x: 100%;
+            }
+            to {
+                background-position-x: 0%;
+            }
+        }
+        
+        html {
+            box-sizing: border-box;
+        }
+        
+        *,
+        *:before,
+        *:after {
+            box-sizing: inherit;
+        }
+        
+        body {
+            background-color: rgb(245, 244, 238);
+        }
+        
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+        }
+        
+        .picture {
+            flex-basis: 33%;
+            min-height: 250px;
+            padding: 7px 8px;
+            position: relative;
+        }
+        
+        .picture:hover>img {
+            box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.6);
+        }
+        
+        .img {
+            width: 250px;
+            height: 250px;
+            border-radius: 4px;
+            object-fit: cover;
+            transition: box-shadow 150ms ease-in;
+        }
+        
+        .mockup {
+            position: absolute;
+            width: 250px;
+            height: 250px;
+            background: linear-gradient( -90deg, rgb(236, 236, 236) 0%, rgb(236, 236, 236) 40%, rgb(232, 232, 232) 50%, rgb(236, 236, 236) 60%, rgb(236, 236, 236) 100%);
+            background-repeat: repeat;
+            background-size: 400% 100%;
+            transition: opacity 600ms ease-in;
+        }
+        
+        .loading {
+            animation: loading 1.5s ease infinite;
+        }
+        
+        .fade-out {
+            opacity: 0;
+        }
+        
+        .no-js .lazy,
+        .no-js .mockup {
+            display: none;
+        }
+        
+        img:not([class]) {
+            filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.5));
+            /* margin: 30px; */
+            border-radius: 9px;
+        }
+        
+        img[id*="style"] {
+            opacity: 0.7;
+        }
+        
+        img:hover:not(#radius):not(#blah):not(#gla) {
+            opacity: 1;
+            box-shadow: 0 0 5px 3px rgba(0, 140, 186, 0.5);
+        }
+        
+        input {
+            display: none;
+        }
+        
+        figcaption {
+            text-align: center;
+        }
+        
+        .earth {
+            transform: rotate(60deg);
+            width: 50px;
+            height: 50px;
+            overflow: hidden;
+            /*margin-left: auto;
         margin-right: auto;
          opacity: 0.4; */
-      pointer-events: none;
-      transition-duration: 0.4s;
-    }
+            pointer-events: none;
+            transition-duration: 0.4s;
+        }
+        
+        input[type="checkbox"]:checked {
+            border: red, solid, 3px
+        }
+    </style>
 
-    input[type="checkbox"]:checked {
-      border: red, solid, 3px
-    }
-  </style>
+
+    <script>
+        window.addEventListener('load', () => {
+            const removeMockup = (event) => {
+                const mockup = event.target.previousElementSibling
+                mockup.addEventListener('transitionend', mockup.remove)
+                mockup.classList.remove('loading')
+                mockup.classList.add('fade-out')
+            }
+
+            const loadImage = (img) => {
+                img.previousElementSibling.classList.add('loading')
+                img.setAttribute('src', img.dataset.src)
+                img.removeAttribute('data-src')
+                img.addEventListener('load', removeMockup)
+            }
+
+            const onEnterView = (entries, observer) => {
+                for (let entry of entries) {
+                    if (entry.isIntersecting) {
+                        loadImage(entry.target)
+                        observer.unobserve(entry.target)
+                    }
+                }
+            }
+
+            const watcher = new IntersectionObserver(onEnterView)
+            const lazyImages = document.querySelectorAll('.img.lazy')
+            for (let image of lazyImages) {
+                watcher.observe(image)
+            }
+        })
+    </script>
 </head>
 
 <body>
 
-  {% include 'header.html' %}
-  <div class='container-fluid'>
-    <div class="row">
+    {% include 'header.html' %}
+    <div class='container-fluid'>
+        <div class="row">
 
-      <div class="col-2">
-        <div class="card mr-2 ml-2">
-          <div class="card-header">
-            Featured
-          </div>
-          <div class="card-body">
-            <img class="earth" src="{% static 'website_picture/earth.png' %}" style="box-shadow: none;" />
-            {{now}}
+            <div class="col-2">
+                <div class="card mr-2 ml-2">
+                    <div class="card-header">
+                        Featured
+                    </div>
+                    <div class="card-body">
+                        <img class="earth" src="{% static 'website_picture/earth.png' %}" style="box-shadow: none;" /> {{now}}
 
-          </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-10">
+                <!-- <div class="card mr-5"> -->
+                <!-- <div class="card-header"> -->
+                {% block cardtitle%} {% endblock%}
+                <!-- </div> -->
+                <!-- <div class="card-body"> -->
+
+                {% block content %} {% endblock %}
+                <!-- </div> -->
+                <!-- </div> -->
+            </div>
+
         </div>
-      </div>
-
-      <div class="col-10">
-        <!-- <div class="card mr-5"> -->
-        <!-- <div class="card-header"> -->
-        {% block cardtitle%} {% endblock%}
-        <!-- </div> -->
-        <!-- <div class="card-body"> -->
-
-        {% block content %} {% endblock %}
-        <!-- </div> -->
-        <!-- </div> -->
-      </div>
 
     </div>
 
-  </div>
+    </div>
 
-  </div>
-
-  {% include 'scripts.html' %}
-  {% include 'footer.html' %}
+    {% include 'scripts.html' %} {% include 'footer.html' %}
 </body>
 
 </html>
