--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -35,4 +35,13 @@
     </div> -->
 </div>
 
+<section class="container">
+    <picture class="picture">
+        <div class="mockup"></div>
+        <img data-src="images/3qf.jpg" class="img lazy" alt="">
+        <noscript>
+            <img src="images/3qf.jpg" class="img" alt="">
+        </noscript>
+    </picture>
+</section>
 {% endfor %} {% endblock%}
