--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -18,24 +18,24 @@
 
 </form>
 
+<section class="container">
+    {% for data in datas%}
 
-{% for data in datas%}
-
-<!-- <div class="ml-3" style="float: left; z-index: auto;">
+    <!-- <div class="ml-3" style="float: left; z-index: auto;">
     <a href="{% static data.image_path %}" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
         <img id="gla" src="{% static data.image_path %}" style="max-width: 200px" alt="">
     </a>
 </div> -->
 
-<div class="ml-5" style="display:inline;">
+    <!-- <div class="ml-5" style="display:inline;">
     <a href="{% static data.image_path %}" data-rel="lightcase"><img id="gla" class="img lazy" data-src="{% static data.image_path %}" style="height:auto;max-width:200px;margin-top:20px;" alt="">
-    </a>
+    </a> -->
     <!-- <div class="card-body">
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div> -->
-</div>
-<div class="ml-5" style="display:inline;">
-    <section class="container">
+    <!-- </div> -->
+    <div class="ml-5" style="display:inline;">
+
         <picture class="picture">
             <a href="{% static data.image_path %}" data-rel="lightcase">
                 <div class="mockup"></div>
@@ -45,6 +45,6 @@
             <img src="{% static data.image_path %}" class="img" alt="">
         </noscript>
         </picture>
-    </section>
-</div>
-{% endfor %} {% endblock%}
+
+    </div>
+    {% endfor %} </section>{% endblock%}
