--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -37,7 +37,7 @@
     <!-- </div> -->
 
 
-    <picture class="picture">
+    <picture class="picture" style="display: inline;">
         <a href="{% static data.image_path %}" data-rel="lightcase">
             <div class="mockup"></div>
         </a>
