--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -19,9 +19,9 @@
 </form>
 
 
-
-{% for data in datas%}
 <section class="container" style="display: inline;">
+    {% for data in datas%}
+
     <!-- <div class="ml-3" style="float: left; z-index: auto;">
     <a href="{% static data.image_path %}" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
         <img id="gla" src="{% static data.image_path %}" style="max-width: 200px" alt="">
@@ -37,7 +37,7 @@
     <!-- </div> -->
 
 
-    <picture class="picture">
+    <picture class="picture" style="margin-top: 10px;">
         <a href="{% static data.image_path %}" data-rel="lightcase">
             <div class="mockup"></div>
         </a>
@@ -47,5 +47,5 @@
         </noscript>
     </picture>
 
-</section>
-{% endfor %} {% endblock%}
+
+    {% endfor %} </section>{% endblock%}
