--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -39,11 +39,11 @@
 
     <picture class="picture" style="margin-top: 10px;">
         <a href="{% static data.image_path %}" data-rel="lightcase">
-            <div class="mockup"></div>
+            <div class="mockup" style="margin-top: 10px;></div>
         </a>
-        <img data-src="{% static data.image_path %}" class="img lazy" alt="">
+        <img data-src="{% static data.image_path %}" style="margin-top: 10px; class=" img lazy " alt=" ">
         <noscript>
-            <img src="{% static data.image_path %}" class="img" alt="">
+            <img src="{% static data.image_path %} " style="margin-top: 10px; class="img" alt="">
         </noscript>
     </picture>
 
