--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
         
         .container {
             max-width: 800px;
-            margin: 0 auto;
+            margin: 0;
             display: flex;
             justify-content: space-evenly;
             flex-wrap: wrap;
