--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -38,10 +38,10 @@
 
 
     <picture class="picture" style="margin-top: 20px;">
-        <a href="{% static data.image_path %}" data-rel="lightcase">
-            <div class="mockup" style="margin-top: 20px;"></div>
-        </a>
-        <img data-src="{% static data.image_path %}" style="margin-top: 20px;" class="img lazy " alt=" ">
+
+        <div class="mockup" style="margin-top: 20px;"></div>
+
+        <a href="{% static data.image_path %}" data-rel="lightcase"><img data-src="{% static data.image_path %}" style="margin-top: 20px;" class="img lazy " alt=" "></a>
         <noscript>
             <img src="{% static data.image_path %} " style="margin-top: 20px;" class="img" alt="">
         </noscript>
