--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -36,16 +36,16 @@
     </div> -->
     <!-- </div> -->
 
+    <a href="{% static data.image_path %}" data-rel="lightcase">
+        <picture class="picture" style="margin-top: 20px;">
 
-    <picture class="picture" style="margin-top: 20px;">
+            <div class="mockup" style="margin-top: 20px;"></div>
 
-        <div class="mockup" style="margin-top: 20px;"></div>
-
-        <a href="{% static data.image_path %}" data-rel="lightcase"><img data-src="{% static data.image_path %}" style="margin-top: 20px;" class="img lazy " alt=" "></a>
-        <noscript>
+            <img data-src="{% static data.image_path %}" style="margin-top: 20px;" class="img lazy " alt=" ">
+            <noscript>
             <img src="{% static data.image_path %} " style="margin-top: 20px;" class="img" alt="">
         </noscript>
-    </picture>
-
+        </picture>
+    </a>
 
     {% endfor %} </section>{% endblock%}
