--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -36,7 +36,7 @@
     </div> -->
     <!-- </div> -->
 
-    <a class="img lazy" href="{% static data.image_path %}" data-rel="lightcase">
+    <a href="{% static data.image_path %}" data-rel="lightcase">
         <picture class="picture" style="margin-top: 20px;">
 
             <div class="mockup" style="margin-top: 20px;"></div>
