--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -19,7 +19,7 @@
 </form>
 
 
-<section class="ml-5" style="display: inline;">
+<section style="display: inline;">
     {% for data in datas%}
 
     <!-- <div class="ml-3" style="float: left; z-index: auto;">
