--- a/home/templates/gallery.html
+++ b/home/templates/gallery.html
@@ -10,8 +10,9 @@
                 <label for="numbersinput">Numbers</label>
                 <input type="text" name="nums" class="form-control" id="numbersinput"> -->
         <h3> <label for="typename">語意搜尋</label>
-            <h3>
-                <input type="text" name="luis" class="form-control" id="luis" required/>
+        </h3>
+        <p>譬如：我要狗的照片，我要兩隻狗的照片，我不要狗的照片，我要貓和狗的照片等等...</p>
+        <input type="text" name="luis" class="form-control" id="luis" required/>
     </div>
     <button type="submit" class="btn btn-primary nt-3">Submit</button>
     <a class="btn btn-primary" href="/delmypic">MANAGE</a>
