--- a/home/templates/select.html
+++ b/home/templates/select.html
@@ -1,25 +1,22 @@
-{% extends 'base.html'%}
-{% load static %}
-{% block title %}AIEN06-TEAM 4{% endblock %}
-
-{% block content %}
+{% extends 'base.html'%} {% load static %} {% block title %}AIEN06-TEAM 4{% endblock %} {% block content %}
 
 <form action="/selected/" method="get">
 
     <div class="form-group">
-            <!-- <label for="typename">Class name</label>
+        <!-- <label for="typename">Class name</label>
             <input type="text" name="searchname" class="form-control" id="typename">
     </div> -->
-    <!-- <div class="form-group">
+        <!-- <div class="form-group">
             <label for="numbersinput">Numbers</label>
             <input type="text" name="nums" class="form-control" id="numbersinput"> -->
-            {% if errormassage != None %}
-            <div class="alert alert-info" role="alert">
-                {{ errormassage }}
-              </div>
-            {% endif %}
+        {% if errormassage != None %}
+        <div class="alert alert-info" role="alert">
+            {{ errormassage }}
+        </div>
+        {% endif %}
 
-        <label for="typename">語意分析用</label>
+        <h3><label for="typename">語意分析用</label></h3>
+        <p>譬如：我要狗的照片，我要兩隻狗的照片，我不要狗的照片，我要貓和狗的照片等等...</p>
         <input type="text" name="luis" class="form-control" id="luis" required/>
     </div>
     <button type="submit" class="btn btn-primary nt-3">Submit</button>
@@ -28,38 +25,32 @@
 </form>
 <form action="/manageselect/" method="POST">
     {%csrf_token%}
-    <button id="manageselect" type="submit" class="btn btn-primary nt-3" style="display: none;"></button>
-{% for data in output_imagepath %}
+    <button id="manageselect" type="submit" class="btn btn-primary nt-3" style="display: none;"></button> {% for data in output_imagepath %}
 
 
-<!-- <div class="ml-5" style="display:inline">
+    <!-- <div class="ml-5" style="display:inline">
    <a href="{% static data %}" data-rel="lightcase"> <img id="gla" style="max-width: 200px;margin-top:20px" src="{% static data %}" alt=""></a>
 </div> -->
 
 
-<div class="ml-5" style="display: inline-block;text-align:center;">
+    <div class="ml-5" style="display: inline-block;text-align:center;">
 
-    <div class="custom-control custom-checkbox mb-3" style="inline-box;">
-     <input type="checkbox" class="custom-control-input custom-checkbox" id="{{data.image_path}}" name="checks"
-       value="{% static data %}" checked>
-     
-        <a href="{% static data %}" data-rel="lightcase"><img id="gla" src="{% static data %}" style="height:auto;max-width:200px;margin-top:20px" alt=""></a>
-    
- 
-     </div>
-   </div>
+        <div class="custom-control custom-checkbox mb-3" style="inline-box;">
+            <input type="checkbox" class="custom-control-input custom-checkbox" id="{{data.image_path}}" name="checks" value="{% static data %}" checked>
 
-{% endfor %}
+            <a href="{% static data %}" data-rel="lightcase"><img id="gla" src="{% static data %}" style="height:auto;max-width:200px;margin-top:20px" alt=""></a>
+
+
+        </div>
+    </div>
+
+    {% endfor %}
 </form>
 
 <script>
     function forsubmit() {
 
-          $("#manageselect").click()
-      }
+        $("#manageselect").click()
+    }
 </script>
 {% endblock%}
-
-
-
-
