--- a/templates/header.html
+++ b/templates/header.html
@@ -1,33 +1,26 @@
-
 <!-- header.html-->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary mb-3">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <ul class="navbar-nav mr-auto">
-      <a class="nav-item nav-link " href="/menu">Home <span class="sr-only">(current)</span></a>
-      {% if request.session.user_id %}
-      <a class="nav-item nav-link gallery" href="/gallery">Gallery</a>
-      <a class="nav-item nav-link styletransfer" href="/styletransfer">Styletransfer</a>
-      <!-- <a class="nav-item nav-link delmypic" href="/delmypic">Delmypic</a> -->
-      <a class="nav-item nav-link facerecognition" href="/facerecognition">Facerecognition</a>
-      {% endif %}
-    </ul>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <ul class="navbar-nav mr-auto">
+            <a class="nav-item nav-link " href="/menu">Home <span class="sr-only">(current)</span></a> {% if request.session.user_id %}
+            <a class="nav-item nav-link gallery" href="/gallery">Gallery</a>
+            <a class="nav-item nav-link styletransfer" href="/styletransfer">Styletransfer</a>
+            <!-- <a class="nav-item nav-link delmypic" href="/delmypic">Delmypic</a> -->
+            <a class="nav-item nav-link facerecognition" href="/facerecognition">Facerecognition</a> {% endif %}
+        </ul>
 
-    <ul class="navbar-nav mr-right">
-      {% if not request.session.user_id %}
-      <a class="nav-item nav-link" href="/signup">SIGNUP</a>
-      <a class="nav-item nav-link" href="/login">LOGIN</a>
-      {% endif %}
-
-      {% if request.session.user_id %}
-      <a class="nav-item nav-link" href="/upload">Upload</a>
-      <a class="nav-item nav-link" href="/logout">LOGOUT</a>
-      {% endif %}
-    </ul> 
-    </ul> 
-  </div>
+        <ul class="navbar-nav mr-right">
+            {% if not request.session.user_id %}
+            <a class="nav-item nav-link" href="/signup">SIGNUP</a>
+            <a class="nav-item nav-link" href="/login">LOGIN</a> {% endif %} {% if request.session.user_id %}
+            <a class="nav-item nav-link upload" href="/upload">Upload</a>
+            <a class="nav-item nav-link" href="/logout">LOGOUT</a> {% endif %}
+        </ul>
+        </ul>
+    </div>
 </nav>
