--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -4,15 +4,15 @@
     urlNow = window.location.href.split('/');
     urlCheck = urlNow[urlNow.length - 2];
     if (urlCheck == "gallery") {
-        $('.gallery').addClass('active')
+        $('.gallery').addClass('active');
     } else if (urlCheck == "facerecognition") {
-        $('.facerecognition').addClass('active')
+        $('.facerecognition').addClass('active');
     } else if (urlCheck.includes("styletransfer")) {
-        $('.styletransfer').addClass('active')
+        $('.styletransfer').addClass('active');
     } else if (urlCheck == "delmypic") {
-        $('.delmypic').addClass('active')
+        $('.delmypic').addClass('active');
     } else if (urlCheck == "upload") {
-        $('.upload').addClass('active')
+        $('.upload').addClass('active');
     };
 
 
